Network Error Logging: Add RemoveBrowsingData

Bug: 795047
Change-Id: I7f68a7025f782813a0cb7a662a76d23e3a79e497
Reviewed-on: https://chromium-review.googlesource.com/826387
Reviewed-by: Martin Šrámek <msramek@chromium.org>
Reviewed-by: Miriam Gershenson <mgersh@chromium.org>
Commit-Queue: Julia Tuttle <juliatuttle@chromium.org>
Cr-Commit-Position: refs/heads/master@{#527690}
Former-commit-id: a059db81e497d2799c5397d202e41b223ed1abd6