chrome/browser/browsing_data/chrome_browsing_data_remover_delegate_unittest.cc
@@ -82,6 +82,7 @@
 #include "net/http/http_transaction_factory.h"
 #include "net/reporting/reporting_browsing_data_remover.h"
 #include "net/reporting/reporting_service.h"
+#include "net/url_request/network_error_logging_delegate.h"
 #include "net/url_request/url_request_context.h"
 #include "net/url_request/url_request_context_getter.h"
 #include "third_party/skia/include/core/SkBitmap.h"
@@ -916,11 +917,11 @@ class RemoveAutofillTester : public autofill::PersonalDataManagerObserver {
 
 class MockReportingService : public net::ReportingService {
  public:
-  MockReportingService() {}
+  MockReportingService() = default;
 
   // net::ReportingService implementation:
 
-  ~MockReportingService() override {}
+  ~MockReportingService() override = default;
 
   void QueueReport(const GURL& url,
                    const std::string& group,
@@ -949,14 +950,14 @@ class MockReportingService : public net::ReportingService {
 
   int remove_calls() const { return remove_calls_; }
   int last_data_type_mask() const { return last_data_type_mask_; }
-  base::Callback<bool(const GURL&)> last_origin_filter() const {
+  const base::RepeatingCallback<bool(const GURL&)>& last_origin_filter() const {
     return last_origin_filter_;
   }
 
  private:
   int remove_calls_ = 0;
   int last_data_type_mask_ = 0;
-  base::Callback<bool(const GURL&)> last_origin_filter_;
+  base::RepeatingCallback<bool(const GURL&)> last_origin_filter_;
 
   DISALLOW_COPY_AND_ASSIGN(MockReportingService);
 };
@@ -966,7 +967,7 @@ class ClearReportingCacheTester {
   ClearReportingCacheTester(TestingProfile* profile, bool create_service)
       : profile_(profile) {
     if (create_service)
-      service_ = base::MakeUnique<MockReportingService>();
+      service_ = std::make_unique<MockReportingService>();
 
     net::URLRequestContext* request_context =
         profile_->GetRequestContext()->GetURLRequestContext();
@@ -981,9 +982,10 @@ class ClearReportingCacheTester {
     request_context->set_reporting_service(old_service_);
   }
 
-  void GetMockInfo(int* remove_calls_out,
-                   int* last_data_type_mask_out,
-                   base::Callback<bool(const GURL&)>* last_origin_filter_out) {
+  void GetMockInfo(
+      int* remove_calls_out,
+      int* last_data_type_mask_out,
+      base::RepeatingCallback<bool(const GURL&)>* last_origin_filter_out) {
     DCHECK_NE(nullptr, service_.get());
 
     *remove_calls_out = service_->remove_calls();
@@ -995,6 +997,78 @@ class ClearReportingCacheTester {
   TestingProfile* profile_;
   std::unique_ptr<MockReportingService> service_;
   net::ReportingService* old_service_;
+};
+
+class MockNetworkErrorLoggingDelegate
+    : public net::NetworkErrorLoggingDelegate {
+ public:
+  MockNetworkErrorLoggingDelegate() = default;
+
+  // net::NetworkErrorLoggingDelegate implementation:
+
+  ~MockNetworkErrorLoggingDelegate() override = default;
+
+  void OnHeader(const url::Origin& origin, const std::string& value) override {
+    NOTREACHED();
+  }
+
+  void OnNetworkError(const ErrorDetails& details) override { NOTREACHED(); }
+
+  void RemoveBrowsingData(const base::RepeatingCallback<bool(const GURL&)>&
+                              origin_filter) override {
+    ++remove_calls_;
+    last_origin_filter_ = origin_filter;
+  }
+
+  void SetReportingService(net::ReportingService* reporting_service) override {}
+
+  int remove_calls() const { return remove_calls_; }
+  const base::RepeatingCallback<bool(const GURL&)>& last_origin_filter() const {
+    return last_origin_filter_;
+  }
+
+ private:
+  int remove_calls_ = 0;
+  base::RepeatingCallback<bool(const GURL&)> last_origin_filter_;
+
+  DISALLOW_COPY_AND_ASSIGN(MockNetworkErrorLoggingDelegate);
+};
+
+class ClearNetworkErrorLoggingTester {
+ public:
+  ClearNetworkErrorLoggingTester(TestingProfile* profile, bool create_service)
+      : profile_(profile) {
+    if (create_service)
+      delegate_ = std::make_unique<MockNetworkErrorLoggingDelegate>();
+
+    net::URLRequestContext* request_context =
+        profile_->GetRequestContext()->GetURLRequestContext();
+
+    request_context->set_network_error_logging_delegate(delegate_.get());
+  }
+
+  ~ClearNetworkErrorLoggingTester() {
+    net::URLRequestContext* request_context =
+        profile_->GetRequestContext()->GetURLRequestContext();
+    DCHECK_EQ(delegate_.get(),
+              request_context->network_error_logging_delegate());
+    request_context->set_network_error_logging_delegate(nullptr);
+  }
+
+  void GetMockInfo(
+      int* remove_calls_out,
+      base::RepeatingCallback<bool(const GURL&)>* last_origin_filter_out) {
+    DCHECK_NE(nullptr, delegate_.get());
+
+    *remove_calls_out = delegate_->remove_calls();
+    *last_origin_filter_out = delegate_->last_origin_filter();
+  }
+
+ private:
+  TestingProfile* profile_;
+  std::unique_ptr<MockNetworkErrorLoggingDelegate> delegate_;
+
+  DISALLOW_COPY_AND_ASSIGN(ClearNetworkErrorLoggingTester);
 };
 
 // Implementation of the TestingProfile that provides an SSLHostStateDelegate
@@ -2483,7 +2557,7 @@ TEST_F(ChromeBrowsingDataRemoverDelegateTest, ReportingCache_Cookies) {
 
   int remove_count;
   int data_type_mask;
-  base::Callback<bool(const GURL&)> origin_filter;
+  base::RepeatingCallback<bool(const GURL&)> origin_filter;
   tester.GetMockInfo(&remove_count, &data_type_mask, &origin_filter);
 
   EXPECT_EQ(1, remove_count);
@@ -2507,7 +2581,7 @@ TEST_F(ChromeBrowsingDataRemoverDelegateTest,
 
   int remove_count;
   int data_type_mask;
-  base::Callback<bool(const GURL&)> origin_filter;
+  base::RepeatingCallback<bool(const GURL&)> origin_filter;
   tester.GetMockInfo(&remove_count, &data_type_mask, &origin_filter);
 
   EXPECT_EQ(1, remove_count);
@@ -2526,7 +2600,7 @@ TEST_F(ChromeBrowsingDataRemoverDelegateTest, ReportingCache_History) {
 
   int remove_count;
   int data_type_mask;
-  base::Callback<bool(const GURL&)> origin_filter;
+  base::RepeatingCallback<bool(const GURL&)> origin_filter;
   tester.GetMockInfo(&remove_count, &data_type_mask, &origin_filter);
 
   EXPECT_EQ(1, remove_count);
@@ -2552,7 +2626,7 @@ TEST_F(ChromeBrowsingDataRemoverDelegateTest,
 
   int remove_count;
   int data_type_mask;
-  base::Callback<bool(const GURL&)> origin_filter;
+  base::RepeatingCallback<bool(const GURL&)> origin_filter;
   tester.GetMockInfo(&remove_count, &data_type_mask, &origin_filter);
 
   EXPECT_EQ(1, remove_count);
@@ -2574,7 +2648,7 @@ TEST_F(ChromeBrowsingDataRemoverDelegateTest,
 
   int remove_count;
   int data_type_mask;
-  base::Callback<bool(const GURL&)> origin_filter;
+  base::RepeatingCallback<bool(const GURL&)> origin_filter;
   tester.GetMockInfo(&remove_count, &data_type_mask, &origin_filter);
 
   EXPECT_EQ(1, remove_count);
@@ -2603,7 +2677,7 @@ TEST_F(ChromeBrowsingDataRemoverDelegateTest,
 
   int remove_count;
   int data_type_mask;
-  base::Callback<bool(const GURL&)> origin_filter;
+  base::RepeatingCallback<bool(const GURL&)> origin_filter;
   tester.GetMockInfo(&remove_count, &data_type_mask, &origin_filter);
 
   EXPECT_EQ(1, remove_count);
@@ -2612,6 +2686,56 @@ TEST_F(ChromeBrowsingDataRemoverDelegateTest,
             data_type_mask);
   EXPECT_TRUE(
       ProbablySameFilters(builder->BuildGeneralFilter(), origin_filter));
+}
+
+TEST_F(ChromeBrowsingDataRemoverDelegateTest, NetworkErrorLogging_NoDelegate) {
+  ClearNetworkErrorLoggingTester tester(GetProfile(), false);
+
+  BlockUntilBrowsingDataRemoved(
+      base::Time(), base::Time::Max(),
+      content::BrowsingDataRemover::DATA_TYPE_COOKIES |
+          ChromeBrowsingDataRemoverDelegate::DATA_TYPE_HISTORY,
+      true);
+
+  // Nothing to check, since there's no mock service; we're just making sure
+  // nothing crashes without a service.
+}
+
+TEST_F(ChromeBrowsingDataRemoverDelegateTest, NetworkErrorLogging_Cookies) {
+  ClearNetworkErrorLoggingTester tester(GetProfile(), true);
+
+  std::unique_ptr<BrowsingDataFilterBuilder> builder(
+      BrowsingDataFilterBuilder::Create(BrowsingDataFilterBuilder::WHITELIST));
+  builder->AddRegisterableDomain(kTestRegisterableDomain1);
+
+  BlockUntilOriginDataRemoved(base::Time(), base::Time::Max(),
+                              content::BrowsingDataRemover::DATA_TYPE_COOKIES,
+                              builder->Copy());
+
+  int remove_count;
+  base::RepeatingCallback<bool(const GURL&)> origin_filter;
+  tester.GetMockInfo(&remove_count, &origin_filter);
+
+  EXPECT_EQ(1, remove_count);
+  EXPECT_TRUE(
+      ProbablySameFilters(builder->BuildGeneralFilter(), origin_filter));
+}
+
+// This would use an origin filter, but history isn't yet filterable.
+TEST_F(ChromeBrowsingDataRemoverDelegateTest, NetworkErrorLogging_History) {
+  ClearNetworkErrorLoggingTester tester(GetProfile(), true);
+
+  BlockUntilBrowsingDataRemoved(
+      base::Time(), base::Time::Max(),
+      ChromeBrowsingDataRemoverDelegate::DATA_TYPE_HISTORY, true);
+
+  int remove_count;
+  base::RepeatingCallback<bool(const GURL&)> origin_filter;
+  tester.GetMockInfo(&remove_count, &origin_filter);
+
+  EXPECT_EQ(1, remove_count);
+  EXPECT_TRUE(ProbablySameFilters(BrowsingDataFilterBuilder::BuildNoopFilter(),
+                                  origin_filter));
 }
 
 // Test that all WebsiteSettings are getting deleted by creating a
